// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renderer fancy render 1`] = `
"+----+----+----+----+----+
| [31m2[39m  | [43m[30m9[39m[49m  | [42m[30m14[39m[49m | [31m2[39m  | [103m[30m0[39m[49m  |
+----+----+----+----+----+
| [104m[30m15[39m[49m | [104m[30m15[39m[49m | [31m2[39m  | [104m[30m15[39m[49m | [42m[30m14[39m[49m |
+----+----+----+----+----+
| [103m[30m0[39m[49m  | [46m[30m13[39m[49m | [35m8[39m  | [42m[30m14[39m[49m | [94m5[39m  |
+----+----+----+----+----+
| [42m[30m14[39m[49m | [32m11[39m | [106m[30m10[39m[49m | [43m[30m9[39m[49m  | [106m[30m10[39m[49m |
+----+----+----+----+----+
| [32m11[39m | [33m3[39m  | [93m7[39m  | [103m[30m0[39m[49m  | [94m5[39m  |
+----+----+----+----+----+

room 0 size=3 cells=4,10,23
room 2 size=3 cells=0,3,7
room 3 size=1 cells=21
room 5 size=2 cells=14,24
room 7 size=1 cells=22
room 8 size=1 cells=12
room 9 size=2 cells=1,18
room 10 size=2 cells=17,19
room 11 size=2 cells=16,20
room 13 size=1 cells=11
room 14 size=4 cells=2,9,13,15
room 15 size=3 cells=5,6,8"
`;

exports[`Grid renderer fancy render 2`] = `
"+----+----+----+----+----+
| 2  | 9  | 14 | 2  | 0  |
+----+----+----+----+----+
| 15 | 15 | 2  | 15 | 14 |
+----+----+----+----+----+
| 0  | 13 | 8  | 14 | 5  |
+----+----+----+----+----+
| 14 | 11 | 10 | 9  | 10 |
+----+----+----+----+----+
| 11 | 3  | 7  | 0  | 5  |
+----+----+----+----+----+

room 0 size=3 cells=4,10,23
room 2 size=3 cells=0,3,7
room 3 size=1 cells=21
room 5 size=2 cells=14,24
room 7 size=1 cells=22
room 8 size=1 cells=12
room 9 size=2 cells=1,18
room 10 size=2 cells=17,19
room 11 size=2 cells=16,20
room 13 size=1 cells=11
room 14 size=4 cells=2,9,13,15
room 15 size=3 cells=5,6,8"
`;

exports[`Grid renderer simple render 1`] = `
" [96m2[39m  [91m9[39m [103m[30m14[39m[49m  [96m2[39m  [93m0[39m
[45m[30m15[39m[49m [45m[30m15[39m[49m  [96m2[39m [45m[30m15[39m[49m [103m[30m14[39m[49m
 [93m0[39m [102m[30m13[39m[49m  [41m[30m8[39m[49m [103m[30m14[39m[49m  [105m[30m5[39m[49m
[103m[30m14[39m[49m [32m11[39m [43m[30m10[39m[49m  [91m9[39m [43m[30m10[39m[49m
[32m11[39m  [106m[30m3[39m[49m  [44m[30m7[39m[49m  [93m0[39m  [105m[30m5[39m[49m"
`;

exports[`Grid renderer simple render 2`] = `
" 2  9 14  2  0
15 15  2 15 14
 0 13  8 14  5
14 11 10  9 10
11  3  7  0  5"
`;
